assert(rp->num_q() == no_of_gc_workers) failed: sanity

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 8-pool, 9
    • Component/s: hotspot
    • gc
    • b115

        G1 asserts with

        G1: assert(rp->num_q() == no_of_gc_workers) failed: sanity

        running the following program

        public class GCTest {
          private static byte[] garbage;
          public static void main(String [] args) {
            System.out.println("Creating garbage");
            // create 128MB of garbage. This should result in at least one GC
            for (int i = 0; i < 1024; i++) {
              garbage = new byte[128 * 1024];
            }
            System.out.println("Done");
          }
        }

        with

        -Xmx10m -XX:+UseG1GC -XX:+UseDynamicNumberOfGCThreads -XX:+ParallelRefProcEnabled

        Seems to be a re-appearance of JDK-8055250.

        Reported by G. Lindenmaier in the following mail to hotspot-gc-dev:

        http://mail.openjdk.java.net/pipermail/hotspot-gc-dev/2016-February/016481.html

        The suggestion there is to add this case to gc/ergonomics/TestDynamicNumberOfGCThreads.java

              Assignee:
              Jon Masamitsu (Inactive)
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: