8149343: assert(rp->num_q() == no_of_gc_workers) failed: sanity

Reviewed-by: tschatzl, kbarrett